# libairx

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
bridge/: bridge.h
proto/: discovery_packet.proto
src/: cli.rs  lib.rs  lib_android.rs  lib_generic.rs  lib_util.rs  main.rs  network.rs  service.rs  transmission.rs
src/compatibility/: bytes_endian.rs  mod.rs  unified_endian.rs
src/extension/: ip_to_u32.rs  mod.rs
src/hack/: global.rs
src/network/: discovery_service.rs  mod.rs  peer.rs  socket.rs  tcp_server.rs  text_service.rs
src/packet/: data_packet.rs  data_transmission.rs  discovery_packet.rs  file_coming_packet.rs  mod.rs  protocol.rs  text.rs  text_packet.rs
src/packet/data/: file_coming_packet.rs  file_part_packet.rs  file_part_response_packet.rs  file_receive_response_packet.rs  magic_numbers.rs  mod.rs  text_packet.rs
src/packet/protocol/: data.rs  hash.rs  mod.rs  serialize.rs
src/proto/: discovery_packet.rs  mod.rs
src/service/: airx_service.rs  clipboard_service.rs  data_service.rs  discovery_service.rs  mod.rs  text_service.rs
src/service/context/: data_service_context.rs  mod.rs
src/service/handler/: context.rs  file_coming_packet_handler.rs  (+5 more)
src/transmission/: protocol.rs  text.rs
src/util/: mod.rs  network.rs  os.rs  shared_mutable.rs
tests/: main.rs  test_data_packet.rs  test_discovery_packet.rs  test_file_coming_packet.rs  test_file_part_packet.rs  test_file_receive_response_packet.rs  test_peer.rs  test_shared_mutable.rs  test_socket_addr_tostring.rs  test_text_packet.rs  test_unified_endian.rs
(+3 files in other folders)
