[package]
name = "libairx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
futures = "0.3.25"
chrono = "0.4.23"
network-interface = "0.1.6"
clipboard-master = "3.1.3"
arboard = "3.2.0"

[lib]
crate-type = ["cdylib"]
name = "airx"
