[package]
name = "airx"
version = "0.1.0"
edition = "2021"
authors = ["Zhen Guan", "Shijunyi Liu", "Jiabao Guo", "Chang Guan"]
description = "Core library of AirX, the fast, reliable and lightweight sync tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-interface = "=0.1.6"
log = "=0.4.17"
log4rs = "=1.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libairx"
